[tool.poetry]
name = "darkstain"
version = "0.1.0"
description = ""
authors = ["pzaloznyi <pzaloznyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
